Enhance Java 21+ features and migrate to proper logging
Major enhancements:
- Added modern Java 21+ features: Records, Switch Expressions, Pattern Matching
- Enhanced ThreadRunner with structured concurrency and CompletableFuture
- Improved performance measurement with detailed metrics and statistics
- Migrated from System.out.println to SLF4J logging framework
- Added comprehensive logging configuration with multiple appenders
- Created EnhancedDemo with advanced benchmarking capabilities
- Added SimpleLogger for testing without external dependencies
- Improved error handling and resource management
- Added performance comparison and analysis features

Technical improvements:
- Better thread management with proper timeout handling
- Enhanced task simulation with realistic workloads
- Structured performance reporting with tasks/sec metrics
- Comprehensive benchmarking with multiple configurations
- Type-safe enum-based thread selection
- Immutable configuration records with validation